finalização projeto QRcode

--- a/desafio001_QRcode/index.html
+++ b/desafio001_QRcode/index.html
@@ -9,12 +9,12 @@
 <body>
     <div class="container">
         <div class="container_QRcode">
-            <img src="imagem/image-qr-code.png" alt="QRcode">
+            <!--Aqui fica uma imagem-->
         </div>
         <div class="container_txt">
-            <h2>Improve your front-end<br>skills by building projects</h2>
+            <h2>Improve your front-end skills by building projects</h2>
 
-            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+            <p>Scan the QR code to visit FrontendMentor and take your coding skills to the next level</p>
         </div>
     </div>
 </body>
