--- a/Blog_preview_card/index.html
+++ b/Blog_preview_card/index.html
@@ -3,10 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="style/estilo.css">
     <title>Blog previw card</title>
 </head>
 <body>
-    
+    <div class="container_card">
+        <div class="container_img">
+            <img src="img/illustration-article.svg" alt="Imagem">
+        </div>
+
+        <a class="btn" href="#">Learning</a>
+
+        <p>Published 21 Dec 2023</p>
+
+        <h2>HTML & CSS foundations</h2>
+
+        <p class="descricao">
+            Thes languages are the backbone of every website, defining structure, content, and presentation
+        </p>
+
+        <div class="social">
+            <img src="img/image-avatar.webp" alt="Avatar">
+            <a href="#">Greg Hooper</a>
+        </div>
+    </div>
 </body>
 </html>
